# SmoothParticleHydrodynamics

./: .gitignore  CMakeLists.txt  README.md
input/: particles
src/: dynamic-array.c  dynamic-array.h  line-change.c  line-change.h  main.c  particle-list.c  particle-list.h  particle.c  particle.h  smoothing-function.c  smoothing-function.h  smooting-function.h
src/python-plot/: read-file.py
